Bug 429962 - KDevelop/quickopen : QMetaMethod::invoke prints error message
Summary: KDevelop/quickopen : QMetaMethod::invoke prints error message
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: quickopen (other bugs)
Version First Reported In: git master
Platform: Compiled Sources All
: NOR minor
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-03 11:20 UTC by RJVB
Modified: 2020-12-07 14:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description RJVB 2020-12-03 11:20:17 UTC
SUMMARY
Clicking in the "Outline" drop-down widget causes QMetaMethod::invoke to print an error on the calling terminal, apparently without any ill effects.

STEPS TO REPRODUCE
1. Open a project and at least 1 source file in KDevelop
2. Click in the Outline widget to get the outline of the code in the file

OBSERVED RESULT
The terminal shows

QMetaObject::invokeMethod: No such method ExpandingTree::scrollTo(const QModelIndex,QAbstractItemView::ScrollHint)

and the outline opens (presumably in that order); the widget is as functinonal as I'd expect it to be. The responsible queued invocation of scrollTo() in quickopenplugin.cpp:872 is 12 years old (commit 6ee7126a) and apparently already didn't do the trick back then.

EXPECTED RESULT
No error messages, and if possible a widget that does show the current function.


SOFTWARE/OS VERSIONS
Qt Version: 5.9.8

ADDITIONAL INFORMATION

After adding an explicit ExpandingTree::scrollTo(const QModelIndex, QAbstractItemView::ScrollHint) (yes, NOT a reference for the 1st argument, to add the supposedly missing method) the error becomes:

QMetaMethod::invoke: Unable to handle unregistered datatype 'QAbstractItemView::ScrollHint'

I have no idea what to do about that.
Comment 1 Milian Wolff 2020-12-07 12:14:40 UTC
Git commit 2536b7607372c01a4f70b964801b827a760ad2b9 by Milian Wolff.
Committed on 07/12/2020 at 10:34.
Pushed by mwolff into branch 'master'.

Properly current item in quick open outline

Use a timer with a lambda instead of trying (and failing) to call
a non-slot via QMetaObject::invoke. While at it, cleanup the code
to not be so horrible.

M  +13   -12   plugins/quickopen/quickopenplugin.cpp

https://invent.kde.org/kdevelop/kdevelop/commit/2536b7607372c01a4f70b964801b827a760ad2b9
Comment 2 RJVB 2020-12-07 14:38:29 UTC
Any idea why adding a slot in the ExpandingTree class didn't work?

I didn't expect that you'd be doing some additional code maintenance, or I would have suggested that it would be nice if one could close the drop-down menu by clicking a 2nd click in the outline line edit widget (like with regular menus).