Properly current item in quick open outline

Use a timer with a lambda instead of trying (and failing) to call
a non-slot via QMetaObject::invoke. While at it, cleanup the code
to not be so horrible.

BUG: 429962